style: Grid layout of profiles and fix hover border being clipped

--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -8,8 +8,8 @@
 }
 
 .root-element {
-  -fx-pref-width: 1000px;
-  -fx-pref-height: 750px;
+  -fx-pref-width: 1250px;
+  -fx-pref-height: 1000px;
 }
 
 .card {
